--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -77,6 +77,8 @@
     border-bottom-color: #ff008c; }
   .portfolio-nav .portfolio-page-link {
     border-bottom-color: #ff008c; }
+  .portfolio-nav .process-page-link {
+    border-bottom-color: #ff008c; }
 
 .portfolio-about {
   padding: 100px 10%; }
@@ -306,40 +308,6 @@
   -ms-flex-direction: column;
   -moz-flex-direction: column;
   flex-direction: column; }
-  .portfolio-process-body .portfolio-process-intro {
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: flex;
-    -webkit-flex-direction: column;
-    -ms-flex-direction: column;
-    -moz-flex-direction: column;
-    flex-direction: column;
-    -webkit-align-items: center;
-    -ms-align-items: center;
-    -moz-align-items: center;
-    align-items: center;
-    background-color: #1f1f1f;
-    border-bottom: solid 3px #b0e9f7;
-    color: #eaeaea;
-    margin-bottom: 50px;
-    padding: 50px 10%; }
-  .portfolio-process-body .portfolio-process-title {
-    font-size: 30px;
-    font-weight: 700;
-    margin-bottom: 15px;
-    text-align: center; }
-  .portfolio-process-body .portfolio-process-title-emphasis {
-    color: #ff008c;
-    font-weight: 300; }
-  .portfolio-process-body .portfolio-process-blurb-intro {
-    font-size: 18px;
-    max-width: 735px;
-    text-align: center; }
-  .portfolio-process-body .portfolio-process-intro-emphasis {
-    font-size: 22px;
-    font-weight: 700;
-    margin-top: 15px; }
   .portfolio-process-body .portfolio-process-row {
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -349,11 +317,14 @@
     -ms-flex-direction: row;
     -moz-flex-direction: row;
     flex-direction: row;
-    margin: 25px 10%; }
+    background-color: #ffffff;
+    color: #1f1f1f;
+    padding: 25px 10%; }
     .portfolio-process-body .portfolio-process-row:first-of-type {
-      margin-top: 50px; }
+      border-top: solid 3px #b0e9f7;
+      padding-top: 100px; }
     .portfolio-process-body .portfolio-process-row:last-of-type {
-      margin-bottom: 75px; }
+      padding-bottom: 100px; }
   .portfolio-process-body .portfolio-process-design-img {
     border: solid 3px #000000;
     margin-right: 5%; }
@@ -393,7 +364,9 @@
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   -moz-flex-direction: column;
-  flex-direction: column; }
+  flex-direction: column;
+  background-color: #ffffff;
+  color: #1f1f1f; }
   .portfolio-ccn-body .portfolio-ccn-intro {
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -440,7 +413,8 @@
     transition: ease-out 0.3s;
     width: 100%; }
     .portfolio-ccn-body .portfolio-ccn-screenshot:hover {
-      opacity: 0.5; }
+      border-color: #ff008c;
+      opacity: 0.8; }
   .portfolio-ccn-body .portfolio-ccn-process {
     display: -ms-flexbox;
     display: -webkit-flex;
@@ -549,131 +523,6 @@
     position: absolute; }
 
 /* end ccn page styles */
-.portfolio-row {
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: flex;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  -moz-flex-direction: row;
-  flex-direction: row;
-  -webkit-justify-content: center;
-  -ms-justify-content: center;
-  -moz-justify-content: center;
-  justify-content: center;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  -moz-flex-wrap: wrap;
-  flex-wrap: wrap;
-  margin: 7%; }
-  .portfolio-row .portfolio-icon {
-    background-color: #ffffff;
-    border: 2px solid #1f1f1f;
-    box-sizing: content-box;
-    cursor: pointer;
-    height: 300px;
-    margin: 1.5%;
-    padding: 0;
-    position: relative;
-    transition: ease-out 0.3s;
-    width: 300px; }
-    .portfolio-row .portfolio-icon .portfolio-icon-image {
-      opacity: 1;
-      transition: ease-out 0.3s;
-      width: 300px; }
-    .portfolio-row .portfolio-icon .portfolio-icon-title {
-      bottom: 114px;
-      color: #1f1f1f;
-      font-size: 22px;
-      font-weight: 700;
-      line-height: 1.5;
-      opacity: 0;
-      position: absolute;
-      text-align: center;
-      transition: ease-out 0.3s;
-      width: 100%; }
-    .portfolio-row .portfolio-icon:hover {
-      border-color: #ff008c; }
-      .portfolio-row .portfolio-icon:hover .portfolio-icon-image {
-        opacity: 0.1; }
-      .portfolio-row .portfolio-icon:hover .portfolio-icon-title {
-        opacity: 1; }
-
-.portfolio-modal {
-  animation-duration: 0.4s;
-  animation-name: fadeIn;
-  background-color: rgba(255, 255, 255, 0.8);
-  display: none;
-  height: 100%;
-  left: 0;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1; }
-  .portfolio-modal .portfolio-modal-content {
-    animation-duration: 0.4s;
-    animation-name: slideIn;
-    background-color: #ffffff;
-    bottom: 0;
-    border: 2px solid #1f1f1f;
-    height: 100%;
-    left: 0;
-    max-width: 600px;
-    overflow: scroll;
-    position: fixed; }
-  .portfolio-modal .portfolio-modal-header {
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: -moz-flex;
-    display: flex;
-    -webkit-flex-direction: row;
-    -ms-flex-direction: row;
-    -moz-flex-direction: row;
-    flex-direction: row;
-    -webkit-align-items: center;
-    -ms-align-items: center;
-    -moz-align-items: center;
-    align-items: center;
-    -webkit-justify-content: space-between;
-    -ms-justify-content: space-between;
-    -moz-justify-content: space-between;
-    justify-content: space-between;
-    background-color: #1f1f1f;
-    color: #eaeaea;
-    font-size: 20px;
-    font-weight: 700;
-    padding: 10px 25px; }
-  .portfolio-modal .portfolio-modal-close-icon {
-    color: #ffffff;
-    font-size: 24px;
-    font-weight: bold;
-    transition: ease-out 0.3s; }
-    .portfolio-modal .portfolio-modal-close-icon:hover {
-      color: #ff008c;
-      cursor: pointer;
-      text-decoration: none; }
-  .portfolio-modal .portfolio-modal-body {
-    padding: 25px; }
-  .portfolio-modal .portfolio-modal-gif {
-    border: 2px solid #1f1f1f;
-    margin-bottom: 15px; }
-  .portfolio-modal .portfolio-modal-paragraph {
-    font-size: 14px;
-    margin-bottom: 15px; }
-  .portfolio-modal .portfolio-modal-link {
-    border-bottom: 2px solid #1f1f1f;
-    color: #1f1f1f;
-    font-size: 16px;
-    margin: 0 10px 10px 0;
-    transition: ease-out 0.3s;
-    width: 168px; }
-    .portfolio-modal .portfolio-modal-link:last-of-type {
-      width: 235px; }
-    .portfolio-modal .portfolio-modal-link:hover {
-      border-bottom: 6px solid #ff008c;
-      color: #ff008c; }
-
 @keyframes slideIn {
   from {
     left: -300px;
@@ -725,18 +574,25 @@
     -moz-flex-direction: row;
     flex-direction: row; }
   .portfolio-footer .portfolio-footer-social-media-icon {
-    background-color: #1f1f1f;
+    background-color: rbga(0, 0, 0, 1);
     border-radius: 50%;
     height: 46px;
     margin: 0 25px 15px 0;
     transition: ease-out 0.3s;
     width: 46px; }
+    .portfolio-footer .portfolio-footer-social-media-icon:first-of-type {
+      height: 43px;
+      width: 43px; }
     .portfolio-footer .portfolio-footer-social-media-icon:hover {
       background-color: #ff008c;
       height: 46px;
       width: 46px; }
       .portfolio-footer .portfolio-footer-social-media-icon:hover:first-of-type {
+        height: 43px;
+        width: 43px;
         border-radius: 10px; }
+      .portfolio-footer .portfolio-footer-social-media-icon:hover:last-of-type {
+        border-radius: 13px; }
   .portfolio-footer .portfolio-footer-email {
     color: #eaeaea;
     font-size: 20px;
