--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -105,6 +105,9 @@
     .portfolio-page-link {
         border-bottom-color: #ff008c;
     }
+    .process-page-link {
+        border-bottom-color: #ff008c;
+    }
 }
 
 .portfolio-about {
@@ -297,52 +300,23 @@
     }
 }
 
-
-
 /* process page styles */
 
 .portfolio-process-body {
     @include flex;
     @include flex-direction(column);
-    .portfolio-process-intro {
-        @include flex;
-        @include flex-direction(column);
-        @include flex-align-items(center);
-        background-color: #1f1f1f;
-        border-bottom: solid 3px #b0e9f7;
-        color: #eaeaea;
-        margin-bottom: 50px;
-        padding: 50px 10%;
-    }
-    .portfolio-process-title {
-            font-size: 30px;
-            font-weight: 700;
-            margin-bottom: 15px;
-            text-align: center;
-    }
-    .portfolio-process-title-emphasis {
-            color: #ff008c;
-            font-weight: 300;
-    }
-    .portfolio-process-blurb-intro {
-        font-size: 18px;
-        max-width: 735px;
-        text-align: center;
-    }
-    .portfolio-process-intro-emphasis {
-        font-size: 22px;
-        font-weight: 700;
-        margin-top: 15px;
-    }
     .portfolio-process-row {
         @include flex;
         @include flex-direction(row);
-        margin: 25px 10%;
+        background-color: #ffffff;
+        color: #1f1f1f;
+        padding: 25px 10%;
         &:first-of-type {
-            margin-top: 50px;
+            border-top: solid 3px #b0e9f7;
+            padding-top: 100px;
         }
         &:last-of-type {
-            margin-bottom: 75px;
+            padding-bottom: 100px;
         }
     }
     .portfolio-process-design-img {
@@ -384,6 +358,8 @@
 .portfolio-ccn-body {
     @include flex;
     @include flex-direction(column);
+    background-color: #ffffff;
+    color: #1f1f1f;
     .portfolio-ccn-intro {
         @include flex;
         @include flex-direction(column);
@@ -419,7 +395,8 @@
         transition: ease-out 0.3s;
         width: 100%;
         &:hover {
-            opacity: 0.5;
+            border-color: #ff008c;
+            opacity: 0.8;
         }
     }
     .portfolio-ccn-process {
@@ -517,122 +494,6 @@
 
 /* end ccn page styles */
 
-.portfolio-row {
-    @include flex;
-    @include flex-direction(row);
-    @include flex-justify-content(center);
-    @include flex-wrap(wrap);
-    margin: 7%;
-    .portfolio-icon {
-        background-color: #ffffff;
-        border: 2px solid #1f1f1f;
-        box-sizing: content-box;
-        cursor: pointer;
-        height: 300px;
-        margin: 1.5%;
-        padding: 0;
-        position: relative;
-        transition: ease-out 0.3s;
-        width: 300px;
-        .portfolio-icon-image {
-            opacity: 1;
-            transition: ease-out 0.3s;
-            width: 300px;
-        }
-        .portfolio-icon-title {
-            bottom: 114px;
-            color: #1f1f1f;
-            font-size: 22px;
-            font-weight: 700;
-            line-height: 1.5;
-            opacity: 0;
-            position: absolute;
-            text-align: center;
-            transition: ease-out 0.3s;
-            width: 100%;
-        }
-        &:hover {
-            border-color: #ff008c;
-            .portfolio-icon-image {opacity: 0.1;}
-            .portfolio-icon-title {opacity: 1;}
-        }
-    }
-
-}
-
-.portfolio-modal {
-    animation-duration: 0.4s;
-    animation-name: fadeIn;
-    background-color: rgba(255,255,255,0.8);
-    display: none;
-    height: 100%;
-    left: 0;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 1;
-    .portfolio-modal-content {
-        animation-duration: 0.4s;
-        animation-name: slideIn;
-        background-color: #ffffff;
-        bottom: 0;
-        border: 2px solid #1f1f1f;
-        height: 100%;
-        left: 0;
-        max-width: 600px;
-        overflow: scroll;
-        position: fixed;
-    }
-    .portfolio-modal-header {
-        @include flex;
-        @include flex-direction(row);
-        @include flex-align-items(center);
-        @include flex-justify-content(space-between);
-        background-color: #1f1f1f;
-        color: #eaeaea;
-        font-size: 20px;
-        font-weight: 700;
-        padding: 10px 25px;
-    }
-    .portfolio-modal-close-icon {
-        color: #ffffff;
-        font-size: 24px;
-        font-weight: bold;
-        transition: ease-out 0.3s;
-        &:hover {
-            color: #ff008c;
-            cursor: pointer;
-            text-decoration: none;
-        }
-    }
-    .portfolio-modal-body {
-        padding: 25px;
-    }
-    .portfolio-modal-gif {
-        border: 2px solid #1f1f1f;
-        margin-bottom: 15px;
-    }
-    .portfolio-modal-paragraph {
-        font-size: 14px;
-        margin-bottom: 15px;
-    }
-    .portfolio-modal-link {
-        border-bottom: 2px solid #1f1f1f;
-        color: #1f1f1f;
-        font-size: 16px;
-        margin: 0 10px 10px 0;
-        transition: ease-out 0.3s;
-        width: 168px;
-        &:last-of-type {
-            width: 235px;
-        }
-        &:hover {
-            border-bottom: 6px solid #ff008c;
-            color: #ff008c;
-        }
-    }
-}
-
 @keyframes slideIn {
     from {left: -300px; opacity: 0}
     to {left: 0; opacity: 1}
@@ -673,18 +534,27 @@
         @include flex-direction(row);
     }
     .portfolio-footer-social-media-icon {
-        background-color: #1f1f1f;
+        background-color: rbga(0,0,0,1);
         border-radius: 50%;
         height: 46px;
         margin: 0 25px 15px 0;
         transition: ease-out 0.3s;
         width: 46px;
+        &:first-of-type {
+            height: 43px;
+            width: 43px;
+        }
         &:hover {
             background-color: #ff008c;
             height: 46px;
             width: 46px;
             &:first-of-type {
+                height: 43px;
+                width: 43px;
                 border-radius: 10px;
+            }
+            &:last-of-type {
+                border-radius: 13px;
             }
         }
     }
