--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -110,9 +110,9 @@
     }
 }
 
-.portfolio-about {
+.portfolio-intro {
     padding: 100px 10%;
-    .portfolio-about-blurb {
+    .portfolio-intro-blurb {
         font-size: 20px;
         margin-bottom: 20px;
         text-align: center;
@@ -121,10 +121,10 @@
             font-weight: 300;
         }
     }
-    .portfolio-about-blurb-emphasis {
+    .portfolio-intro-blurb-emphasis {
         color: #ff008c;
     }
-    .portfolio-about-resume-link {
+    .portfolio-intro-resume-link {
         color: #eaeaea;
         cursor: pointer;
         border-bottom: solid 2px #eaeaea;
@@ -351,6 +351,38 @@
 }
 
 /* end process page styles */
+
+
+/* portfolio: testive marketing page styles */
+
+
+.portfolio-testive-home-page, .portfolio-testive-branding {
+    background-color: #ffffff;
+    color: #1f1f1f;
+    padding: 50px 10%;
+    @include flex;
+    @include flex-direction(column);
+    .portfolio-piece-header {
+        font-weight: 700;
+    }
+    .portfolio-piece-blurb-emphasis {
+        font-weight: 700;
+    }
+    .portfolio-piece-icon {
+        background-color: #1f1f1f;
+    }
+}
+
+
+.portfolio-testive-landing-page {
+    background-color: #1f1f1f;
+    padding: 50px 10%;
+    @include flex;
+    @include flex-direction(column);
+}
+
+
+/* end portfolio: testive marketing page styles */
 
 
 /* ccn page styles */
